[package]
name = "ductile"
version = "0.2.0"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A channel implementation that allows both local in-memory channels and remote TCP-based channels with the same interface."
homepage = "https://github.com/edomora97/ductile"
repository = "https://github.com/edomora97/ductile"
keywords = ["channel", "actor", "network"]
categories = ["concurrency", "network-programming"]
readme = "README.md"

[dependencies]
crossbeam-channel = "0.5"
chacha20 = "0.9"
rand = "0.8"
anyhow = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
